--- a/kode.css
+++ b/kode.css
@@ -21,12 +21,12 @@ nav {
     align-items: center;
     background-color: black;
     border-radius: 5px;
-    padding: 10px 5%;
+    padding: 0 5%;
     margin: 0 auto;
 }
 
 .KLIK h3 {
-    font-size: 28px; /* Memperbesar ukuran font */
+    font-size: 24px;
     letter-spacing: 1px;
     color: aqua;
 }
@@ -44,7 +44,6 @@ nav {
 .menu ul li a {
     text-decoration: none;
     color: aqua;
-    font-size: 20px; /* Memperbesar ukuran font */
 }
 
 .menu ul li a:hover {
@@ -90,11 +89,11 @@ h1, p {
 }
 
 h1 {
-    font-size: 3rem; /* Memperbesar ukuran font */
+    font-size: 2.5rem;
 }
 
 p {
-    font-size: 1.25rem; /* Memperbesar ukuran font */
+    font-size: 1rem;
 }
 
 @media (max-width: 600px) {
@@ -102,7 +101,7 @@ p {
         flex-direction: column;
         align-items: flex-start;
         height: auto;
-        padding: 20px; /* Menambah padding */
+        padding: 10px;
     }
 
     .menu ul {
@@ -118,11 +117,11 @@ p {
     }
 
     h1 {
-        font-size: 2.5rem; /* Sesuaikan ukuran font */
+        font-size: 2rem;
     }
 
     p {
-        font-size: 1.2rem; /* Sesuaikan ukuran font */
+        font-size: 0.9rem;
     }
 
     .KLIK {
