--- a/kode3.css
+++ b/kode3.css
@@ -66,9 +66,11 @@ nav {
 
 .content {
    position: absolute;
-   top: 50%;
+   top: 70%; /* Ubah posisi top sesuai kebutuhan */
    left: 50%;
+   transform: translate(-50%, -50%);
    text-align: center;
    color: black;
+   margin-top: 20px; /* Tambahkan margin atas */
 }
 
