--- a/kode.css
+++ b/kode.css
@@ -29,35 +29,36 @@ header {
 
 nav {
     width: 80%;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: black;
     border-radius: 5px;
-    padding: 10px 5%;
-    margin: 0 auto;
+    padding: 0 5%;
+    margin: 0 auto; 
 }
 
 .KLIK h3 {
-    font-size: 24px; /* Mengembalikan ukuran font ke 24px */
-    letter-spacing: 1px;
-    color: aqua;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 24px; 
+    letter-spacing: 1px; 
+    color: aqua; 
 }
+
 
 .menu ul {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style: none;
-    column-gap: 2em;
-    margin: 0;
-    padding: 0;
+    column-gap: 30px;
 }
 
 .menu ul li a {
     text-decoration: none;
-    color: aqua;
-    font-size: 16px; /* Mengembalikan ukuran font ke 16px */
+    color: aqua; /* Mengubah warna menjadi aqua */
+    font-family: 'poppins';
 }
 
 .menu ul li a:hover {
