--- a/kode.css
+++ b/kode.css
@@ -83,7 +83,7 @@ nav {
 }
 
 .parallax-container.page3 {
-    background-image: url('UwU.png');
+    background-image: url('lucu.png');
 }
 
 .content {
