--- a/kode.css
+++ b/kode.css
@@ -48,21 +48,30 @@ nav {
 
 
 .menu ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    column-gap: 30px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #F8E7ED;
 }
 
-.menu ul li a {
-    text-decoration: none;
-    color: aqua; /* Mengubah warna menjadi aqua */
-    font-family: 'poppins';
+.menu li {
+  float: left;
+  border-right:3px solid #FACCCE;
 }
 
-.menu ul li a:hover {
-    color: #000;
+li a {
+  display: block;
+  color: #E3549B;
+  text-align: center;
+  padding: 30px 80px;
+  text-decoration: light;
+  font-size:30px;
+  text-shadow: 0 0 10px #fff, 0 0 10px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 25px #e60073, 0 0 30px #e60073, 0 0 350px #e60073;
+}
+
+li a:hover {
+  background-color: #FACCCE;
 }
 
 .parallax-container {
@@ -101,10 +110,10 @@ h1, p {
 }
 
 h1 {
-    font-size: 36px; /* Mengembalikan ukuran font ke 36px */
+    font-size: 25px; /* Mengembalikan ukuran font ke 36px */
 }
 
 p {
-    font-size: 18px; /* Mengembalikan ukuran font ke 18px */
+    font-size: 20px; /* Mengembalikan ukuran font ke 18px */
 }
 
